Wed Jun 16 12:02:12 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/Repository_Manager.cpp:

          Made substantial changes to populate the DeploymentPlan
          IDL data structure from the PackageConfiguration data
          structure.

          This change enables the DnC framework to have a much shorter
          version of the DeploymentPlan XML descriptor, as we can get
          the needed information from the PackageConfiguration IDL
          data structure and not from the XML descriptors itself.

Wed Jun 16 11:24:13 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>
	* DnC/Config_Handlers/RUK_Handler.h:
	* DnC/Config_Handlers/NIA_Handler.h:
	* DnC/Config_Handlers/MID_Handler.h:
	* DnC/Config_Handlers/IR_Handler.h:
	* DnC/Config_Handlers/IAD_Handler.h:
	* DnC/Config_Handlers/DnC_Dump.h:
	* DnC/Config_Handlers/Basic_Handler.h:

	Comments, etc.

Tue Jun 15 20:53:28 2004  Irfan Pyarali  <irfan@oomworks.com>

	* tools\ServerActivator\ServerActivator_test_client.cpp:

	  Added missing include file.

	* tools\Segment_Timer\Segment_Timer.cpp:

	  Commented out debug statement since the division in it was
	  failing to compile on Windows.

	* tools\RTComponentServer\RTServer_Impl.cpp (init):

	  Indent fixes.

	* tests\RTCCM\DiffServ\descriptors\run_test.pl:

	  Remove assembly descriptor file also.

Tue Jun 15 15:27:08 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

        *  Dnc/NodeApplication/NodeApplication.cpp
        *  Dnc/NodeApplicationManager/NodeApplicationManager_Impl.cpp
        *  Dnc/NodeApplicationManager/NodeApplicationManager_Impl.h
        *  Dnc/DomainApplicationManager/DomainApplicationManager_Impl.cpp
        *  DnC/ExecutionManager/ExecutionManager_Impl.cpp
        *  Dnc/NodeManager/NodeDaemon_Impl.cpp
        *  Dnc/NodeManager/NodeDaemon_Impl.h
        *  Dnc/NodeManager/Node_Daemon.cpp
        *  DnC/ciao/NodeApp_CB_Impl.cpp
        *  DnC/ciao/NodeApp_CB_Impl.h
